perf: batch post list metadata queries